Dropdown on patients component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dhis2-videoconference",
+  "name": "videoconference-app",
   "version": "1.0.0",
   "description": "",
   "license": "BSD-3-Clause",
